syntax = "proto3";

package bytebase.store;

import "store/approval.proto";
import "store/issue.proto";
import "store/task_run.proto";

option go_package = "generated-go/store";

message IssueCommentPayload {
  string comment = 1;

  oneof event {
    Approval approval = 2;
    IssueUpdate issue_update = 3;
    StageEnd stage_end = 4;
    TaskUpdate task_update = 5;
    TaskPriorBackup task_prior_backup = 6;
  }

  message Approval {
    IssuePayloadApproval.Approver.Status status = 1;
  }

  message IssueUpdate {
    optional string from_title = 1;
    optional string to_title = 2;
    optional string from_description = 3;
    optional string to_description = 4;
    optional Issue.Status from_status = 5;
    optional Issue.Status to_status = 6;
    repeated string from_labels = 7;
    repeated string to_labels = 8;
  }

  message StageEnd {
    string stage = 1;
  }

  message TaskUpdate {
    repeated string tasks = 1;
    // Format: projects/{project}/sheets/{sheet}
    optional string from_sheet = 2;
    // Format: projects/{project}/sheets/{sheet}
    optional string to_sheet = 3;
    optional TaskRun.Status to_status = 6;
  }

  message TaskPriorBackup {
    string task = 1;
    repeated Table tables = 2;
    optional int32 original_line = 3;
    string database = 4;
    string error = 5;

    message Table {
      string schema = 1;
      string table = 2;
    }
  }
}
